Fix missing ID pointer updates for texture paint undo

Partial fix for T61263, however mem-file undo sometimes reloads imbuf's.